Hide the original checkbox better behind the custom slider checkbox. Affects checkbox hover appearance on all platforms; fixes HIFI-796 on iOS

--- a/experiments/nodejs/Spatial-Standup/src/client/css/controls.scss
+++ b/experiments/nodejs/Spatial-Standup/src/client/css/controls.scss
@@ -1624,8 +1624,11 @@ $bottom-controls-container-height: 72px;
 }
 
 .switch input { 
-    width: 48px;
-    height: 26px;
+    width: 44px;
+    height: 22px;
+    position: relative;
+    top: 2px;
+    left: 2px;
 }
 
 .slider {
